# fastai-stack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
fastai_stack/: __init__.py  cli.py  generator.py  models.py
fastforge/: __init__.py  cli.py
templates/project/: .env.example.j2  .gitignore.j2  Dockerfile.j2  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2
templates/project/.github/workflows/: ci.yml.j2
templates/project/app/: main.py.j2  tasks.py.j2
templates/project/app/api/v1/: __init__.py.j2
templates/project/app/api/v1/endpoints/ai/: __init__.py.j2  chat.py.j2  embeddings.py.j2
templates/project/app/core/: config.py.j2  security.py.j2
templates/project/frontend/: index.html.j2  package.json.j2
templates/project/frontend/src/: main.js.j2
templates/project/migrations/: .gitkeep.j2
templates/project/tests/: conftest.py.j2
templates/project/tests/test_api/: test_health.py.j2
tests/: test_cli.py  test_generator.py
website/: README.md  package-lock.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/docs/: page.tsx
website/src/components/: command-panel.tsx  docs-progress.tsx  docs-sidebar.tsx  footer.tsx  hero-typewriter.tsx  navbar.tsx  stack-builder.tsx
